# PromptPro

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: config.claude.json  config.ollama.json  config.openai.json
prompts/: example-login.md
src/: __init__.py  cli.py  clipboard.py  commands.py  config.py  exceptions.py  history.py  logger.py  ollama_client.py  optimizer.py  requirement.py  strategies.py
src/app/: __init__.py  models.py  services.py
src/ui/: __init__.py  console.py  panels.py  tables.py
tests/: __init__.py  test_app_service.py  test_cli.py  test_config.py  test_config_env.py  test_exceptions.py  test_history.py  test_requirement.py  test_strategies.py
