[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpro"
version = "0.4.0"
description = "A prompt optimization CLI for local and hosted LLM workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Zelo", email = "zelo789@example.com" }
]
keywords = [
    "prompt",
    "prompt-engineering",
    "llm",
    "ollama",
    "openai",
    "cli",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific :: Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "build>=1.2.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "twine>=5.0.0",
]
clipboard = [
    "pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/zelo789/PromptPro"
Repository = "https://github.com/zelo789/PromptPro"
Issues = "https://github.com/zelo789/PromptPro/issues"
Documentation = "https://github.com/zelo789/PromptPro#readme"
Changelog = "https://github.com/zelo789/PromptPro/blob/main/CHANGELOG.md"

[project.scripts]
promptpro = "src.cli:run"
pp = "src.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip = ["venv", ".venv", "__pycache__", "*.egg-info"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-q"